--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,5 +1,5 @@
 {
-  "attachmentFolderPath": "images/",
+  "attachmentFolderPath": "assets/images",
   "showUnsupportedFiles": false,
   "useMarkdownLinks": true,
   "promptDelete": false
